# featherflow

./: .gitignore  Dockerfile  README.md  __init__.py  cli  cli.py  core.py  dag.yaml  dag_executor.sh  dependencies.yaml  executor.py  generate_executor_bash_script.py  main.py  parser.py  pyproject.toml  setup.py  task1.sh  task2b.sh  task3.sh  utils.py
config/: supported_commands.yaml
examples/flows/: stock_analysis_flow.json  weather_observations_flow.json
examples/tasks/: aggregate_data_to_csv.py  calculate_indicators.py  download_data.py  generate_signals.py  generate_synopsis.py  get_observations.py
src/featherflow/: cli.py  display.py  executor.py  parser.py  scheduler.py  utils.py
tasks/: evaluate_model.py  generate_report.py  process_data.py  task2a.sh  train_model.py
templates/: bash_template.sh
